# lehre-notebooks

./: .gitignore  Pipfile  README.rst  pyproject.toml  requirements.txt
allgemein/: SmithPraediktor.ipynb  Stellgroessenbeschraenkung.ipynb  Totzeitsystem.ipynb
brueckenkran/: Normalformen.ipynb  Regelung.ipynb  VergleichSteuerung.ipynb  feedforward.py  model.py  observer.py  params.py  trajectory.py  visu.py
klimatisierung/: Parameteridentifikation.ipynb
magnetlager/: Regelung.ipynb  VergleichSteuerung.ipynb  feedforward.py  model.py  observer.py  params.py
tikz/: crane.tex  crane.tikz  craneNonLin.tikz  data.tex  magBall.tex  saturation.tex  tikzImages.tex  twomass.tex  twomass.tikz
zweimassenschwinger/: Normalformen.ipynb  VergleichSteuerung.ipynb  feedforward.py  model.py  params.py  visu.py
