[project]
name = "notebooks"
version = "0.1.0"
description = "Lehre Notebooks"
readme = 'README.rst'
requires-python = '>=3.12'
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-collaboration>=4.0.2",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

